# borrent-client

./: .gitignore  README.md  pyproject.toml
src/: client.py  main.py
src/client/: client.py  converter.py  request_converter.py  torrent_converter.py  udp_socket.py
src/dataclasses/torrent/: metainfo.py  multifile.py  singlefile.py
src/dataclasses/tracker/: response.py
src/entities/requests/: announce.py  connect.py
src/entities/torrent/: info.py  multifile.py  singlefile.py  torrent.py  torrent_converter.py  torrent_info.py
src/entities/tracker/: request.py
src/exceptions/: socket.py  tracker.py
src/networking/: connections.py  sockets.py  tracker_connection.py  udp_socket.py
